# eduri

./: .gitignore  Makefile  README.md  pyproject.toml  vaski_parser.py
.devcontainer/: Dockerfile.postgres  devcontainer.json  docker-compose.yml
.github/: CODEOWNERS  pull_request_template.md
.github/workflows/: deploy.yaml
frontend/: Dockerfile  astro.config.mjs  docker-compose.yml  package-lock.json  package.json  tsconfig.json
frontend/caddy/: Caddyfile
frontend/src/: constants.ts  (+3 more)
pipes/: XML_parsing_help_functions.py  absences_pipe.py  agenda_item_pipe.py  agenda_items.py  agenda_items_pipe.py  assemblies_pipe.py  ballot_pipe.py  ballots_pipe.py  board_proposal_pipe.py  board_proposal_pipe_2.py  committee_report_pipe.py  committee_reports_pipe.py  committees_pipe.py  db.py  election_budgets_pipe.py  election_fundings_pipe.py  election_seasons_pipe.py  government_proposal_pipe.py  government_proposals_pipe.py  harmonize.py  interest_pipe.py  interests_pipe.py  interpellations_pipe.py  lobbies_pipe.py  lobby_actions_pipe.py  lobby_terms_pipe.py  matching_help_functions.py  minister_pipe.py  ministers_pipe.py  mp_committee_membership_pipe.py  mp_committee_memberships_pipe.py  mp_law_proposal_pipe.py  mp_law_proposals_pipe.py  mp_parliamentary_group_membership_pipe.py  mp_parliamentary_group_memberships_pipe.py  mp_party_membership_pipe.py  mp_petition_proposals_pipe.py  mp_pipe.py  mp_proposal_pipe.py  mps_pipe.py  (+10 more)
postgres-init-scripts/: 01_create_tables.sql  02_create_views.sql
scripts/: run_sql.py
sql/: person_search.sql  proposal_search.sql  views.sql
(+54 files in other folders)
