[project]
name = "workspace"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "aiohttp>=3.13.0",
    "lxml>=6.0.0",
    "pandas>=2.3.0",
    "polars>=1.33.1",
    "psycopg2-binary>=2.9.10",
    "requests>=2.32.5",
    "sqlalchemy>=2.0.41",
    "tabulate>=0.9.0",
    "tqdm>=4.67.1",
    "xmltodict>=0.14.2",
]
